<resources>
    <string name="app_name">CochesHector</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Menú View Principal -->
    <string name="perfil">Mi Perfil</string>
    <string name="salir">Salir</string>
    <string name="titulo">Encuentra tu juguete</string>


    <!-- Login View -->
    <string name="nameApp">Coches.Hector</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="noTienesCuenta">¿Aún no tienes cuenta?</string>
    <string name="registrarse">Registrate</string>

    <!-- Register View -->
    <string name="nombreCompleto">Nombre Completo</string>
    <string name="nick">Nick</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="contraseñados">Confirmar Contraseña</string>
    <string name="todoVa">Contraseña</string>


    <!-- Row Vehiculo -->
    <string name="precio">Precio</string>
    <string name="garantia">Garantía 2 años</string>
    <string name="iva">IVA incluido</string>
    <string name="euro">€</string>
    <string name="km">km</string>

    <!-- View Info Vehiculo -->
    <string name="info">Seguimos a tu lado</string>
    <string name="info2">Si te gusta este coche contacta por email, pide información, más fotos o resérvalo sin moverte de casa.</string>
    <string name="info3">Datos del Vehiculo</string>
    <string name="info4">Datos del Vendedor</string>


    <!-- View Add Vehiculo -->
    <string name="nameView">Agregando un Vehiculo</string>
    <string name="anno">Año</string>
    <string name="carroceria">Carroceria</string>
    <string name="caballos">Caballos</string>
    <string name="color">Color</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="registrarVehiculo">Registrar Vehiculo</string>
    <string-array name="Carrocerias">
        <item>Coupé</item>
        <item>Berlina</item>
        <item>Berlina XL</item>
        <item>SUV</item>
        <item>Compacto</item>
        <item>Cabrio</item>
        <item>Clásicos</item>
    </string-array>
</resources>
