<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradado"
    tools:context=".view.RegisterActivity">


    <EditText
        android:id="@+id/edt_nombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_edt_style"
        android:hint="@string/nombreCompleto"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/edt_nick"
        android:background="@drawable/round_edt_style"
        android:hint="@string/nick"
        android:paddingLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_email"
        android:background="@drawable/round_edt_style"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edt_password"
        android:background="@drawable/round_edt_style"
        android:hint="@string/contraseña"
        android:paddingLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_password2"
        android:background="@drawable/round_edt_style"
        android:hint="@string/contraseñados"
        android:paddingLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/edt_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorAzulLetraBoton"
        android:background="@drawable/round_btn_style"
        android:text="@string/iniciarSesion"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>