<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradado"
    tools:context=".view.AddCarroActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        android:textColor="@color/colorNegro"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinMarca"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_edt_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/edt_modelo"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edt_style"
        android:hint="@string/modelo"
        android:paddingLeft="20dp"
        android:textColor="@color/colorNegro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinMarca" />
    <Spinner
        android:id="@+id/spinColor"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edt_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_modelo" />
    <Spinner
        android:id="@+id/spinCarroceria"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edt_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinColor" />
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinCarroceria">
        <EditText
            android:id="@+id/edt_anno"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_edt_style"
            android:hint="@string/anno"
            android:gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorNegro"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinCarroceria" />
        <EditText
            android:id="@+id/edt_caballos"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_edt_style"
            android:hint="@string/caballos"
            android:gravity="center_horizontal"
            android:textColor="@color/colorNegro"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinCarroceria" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear">
        <EditText
            android:id="@+id/edt_km"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_edt_style"
            android:hint="@string/km"
            android:gravity="center_horizontal"
            android:textColor="@color/colorNegro"
            android:layout_marginRight="10dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_caballos" />

        <EditText
            android:id="@+id/edt_precio"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_edt_style"
            android:hint="@string/precio"
            android:gravity="center_horizontal"
            android:textColor="@color/colorNegro"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_km" />
    </LinearLayout>
    <Button
        android:id="@+id/btnAddFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn_style"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/addfoto"
        android:textColor="@color/colorAzulLetraBoton"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear2" />

    <Button
        android:id="@+id/btnRegistrarVehiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn_style"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/registrarVehiculo"
        android:textColor="@color/colorAzulLetraBoton"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddFoto" />

</androidx.constraintlayout.widget.ConstraintLayout>